--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/MrMansfield/Achievementdiary/025f771c/style.css">
 
   
 </head>
