--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Video Background Test</title> 
       <link rel="stylesheet" href="https://cdn.rawgit.com/MrMansfield/Achievementdiary/025f771c/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
 </head>
 
 <body>
