--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Video Background Test</title> 
+  <title>Kellogg Achievement Diary</title> 
       <link rel="stylesheet" href="https://cdn.rawgit.com/MrMansfield/Achievementdiary/025f771c/style.css">
 </head>
 
